# rnnoise

./: .dockerignore  .gitignore  CMakeLists.txt  COMMIT_SUMMARY.md  Dockerfile  QUICKSTART.md  README  TEST_REPORT.md  docker-compose.yml  download_model.sh
docker/: entrypoint.sh
docs/: MULTI_FORMAT.md
examples/: rnnoise_wrapper_demo.c
scripts/: audio_converter.sh
server/: app.py  requirements.txt
test/: denoise_test_report.md
test/audio_samples/: noise.raw  test.raw  test_aac.aac  test_flac.flac  test_m4a.m4a
test/results/: aac_converted.raw  aac_denoised.raw  aac_log.txt  flac_denoised.raw  flac_log.txt  m4a_converted.raw  m4a_denoised.raw  m4a_log.txt  mp3_converted.raw  mp3_denoised.raw  mp3_log.txt  ogg_converted.raw  ogg_denoised.raw  ogg_log.txt  wav_converted.raw  wav_log.txt
